[gd_scene load_steps=3 format=3 uid="uid://blsnafnkw14i7"]

[ext_resource type="Script" path="res://src/match_simulator/visual_match/visual_actors/visual_team/visual_team.gd" id="1_e5wh8"]
[ext_resource type="PackedScene" uid="uid://doptire10wp2v" path="res://src/match_simulator/visual_match/visual_actors/visual_player/visual_player.tscn" id="3_ycu0j"]

[node name="VisualTeam" type="Node2D"]
script = ExtResource("1_e5wh8")

[node name="VisualPlayer1" parent="." instance=ExtResource("3_ycu0j")]

[node name="VisualPlayer2" parent="." instance=ExtResource("3_ycu0j")]

[node name="VisualPlayer3" parent="." instance=ExtResource("3_ycu0j")]

[node name="VisualPlayer4" parent="." instance=ExtResource("3_ycu0j")]

[node name="VisualPlayer5" parent="." instance=ExtResource("3_ycu0j")]

[node name="HomeStateMachine" type="Label" parent="."]
unique_name_in_owner = true
offset_left = 315.0
offset_top = 556.0
offset_right = 355.0
offset_bottom = 578.0

[node name="AwayStateMachine" type="Label" parent="."]
unique_name_in_owner = true
offset_left = 729.0
offset_top = 566.0
offset_right = 769.0
offset_bottom = 588.0
